tests/ui/traits/wf-object/no-duplicates.stderr
error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/no-duplicates.rs:8:21
   |
LL | type _0 = dyn Obj + Obj;
   |               ---   ^^^ additional non-auto trait
   |               |
   |               first non-auto trait
   |
   = help: consider creating a new trait with all of these as supertraits and using that trait here instead: `trait NewTrait: Obj + Obj {}`
   = note: auto-traits like `Send` and `Sync` are traits that have special properties; for more information on them, visit <https://doc.rust-lang.org/reference/special-types-and-traits.html#auto-traits>

error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/no-duplicates.rs:13:28
   |
LL | type _1 = dyn Send + Obj + Obj;
   |                      ---   ^^^ additional non-auto trait
   |                      |
   |                      first non-auto trait
   |
   = help: consider creating a new trait with all of these as supertraits and using that trait here instead: `trait NewTrait: Obj + Obj {}`
   = note: auto-traits like `Send` and `Sync` are traits that have special properties; for more information on them, visit <https://doc.rust-lang.org/reference/special-types-and-traits.html#auto-traits>

error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/no-duplicates.rs:16:28
   |
LL | type _2 = dyn Obj + Send + Obj;
   |               ---          ^^^ additional non-auto trait
   |               |
   |               first non-auto trait
   |
   = help: consider creating a new trait with all of these as supertraits and using that trait here instead: `trait NewTrait: Obj + Obj {}`
   = note: auto-traits like `Send` and `Sync` are traits that have special properties; for more information on them, visit <https://doc.rust-lang.org/reference/special-types-and-traits.html#auto-traits>

error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/no-duplicates.rs:26:34
   |
LL | type _4 = dyn for<'a> ObjL<'a> + for<'b> ObjL<'b>;
   |               ----------------   ^^^^^^^^^^^^^^^^ additional non-auto trait
   |               |
   |               first non-auto trait
   |
   = help: consider creating a new trait with all of these as supertraits and using that trait here instead: `trait NewTrait: for<'a> ObjL<'a> + for<'b> ObjL<'b> {}`
   = note: auto-traits like `Send` and `Sync` are traits that have special properties; for more information on them, visit <https://doc.rust-lang.org/reference/special-types-and-traits.html#auto-traits>

error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/no-duplicates.rs:30:42
   |
LL | type _5 = dyn ObjT<for<'a> fn(&'a u8)> + ObjT<for<'b> fn(&'b u8)>;
   |               ------------------------   ^^^^^^^^^^^^^^^^^^^^^^^^ additional non-auto trait
   |               |
   |               first non-auto trait
   |
   = help: consider creating a new trait with all of these as supertraits and using that trait here instead: `trait NewTrait: ObjT<for<'a> fn(&'a u8)> + ObjT<for<'b> fn(&'b u8)> {}`
   = note: auto-traits like `Send` and `Sync` are traits that have special properties; for more information on them, visit <https://doc.rust-lang.org/reference/special-types-and-traits.html#auto-traits>

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0225`.
